--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,48 @@
   --button-hover-color: #404bbf;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: var(--dark-color);
   background: var(--white-color);
+}
+
+.visually-hidden {
+  position: absolute;
+  top: -150%;
+  z-index: -100;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  user-select: none;
+  pointer-events: none;
+  cursor: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: none;
+  outline: none;
+  white-space: nowrap;
 }
 
 /*---------Remove list markers---------*/
@@ -26,6 +64,37 @@ body {
   list-style-type: none;
 }
 
+/*-----------------Lists-----------------*/
+
+.team-list {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+
+.buttons-list {
+  display: flex;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 24px;
+}
+
+.advantages-list {
+  display: flex;
+  align-items: center;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  gap: 24px;
+}
+
+.apps-list {
+  display: flex;
+  width: 1158px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 /*-----------------Logo-----------------*/
 
 .logo {
@@ -37,9 +106,11 @@ body {
   color: var(--dark-color);
   line-height: 1.33;
   letter-spacing: 0.03em;
+  margin-right: 76px;
 }
 
-.logo .web {
+.logo .web,
+.logo-footer .web {
   color: var(--brand-color);
 }
 
@@ -52,10 +123,8 @@ body {
   color: var(--litemode-color);
   line-height: 1.3125;
   letter-spacing: 0.03em;
-}
-
-.logo-footer .web {
-  color: var(--brand-color);
+  display: flex;
+  margin-bottom: 16px;
 }
 
 /*---------------Navigation---------------*/
@@ -77,9 +146,21 @@ body {
   color: var(--button-hover-color);
 }
 
+.navigation {
+  display: flex;
+  padding: 24px 0;
+  align-items: center;
+}
+
+.navigation-list {
+  display: flex;
+  gap: 40px;
+}
+
 /*-----------------Address-----------------*/
 .address {
   font-style: normal;
+  padding: 24px 0;
 }
 
 .add {
@@ -93,14 +174,24 @@ body {
 .email:focus {
   color: var(--button-hover-color);
 }
+
+.address-list {
+  display: flex;
+  gap: 40px;
+}
+
 /*-----------------Headers-----------------*/
 
 .header {
   font-size: 56px;
   color: var(--white-color);
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  margin-bottom: 48px;
+  width: 496px;
 }
 
 .header-second {
@@ -109,6 +200,7 @@ body {
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
+  margin-bottom: 72px;
 }
 
 .head {
@@ -117,10 +209,16 @@ body {
   color: var(--dark-color);
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
-.head-team {
+.head-team,
+.text-team {
   text-align: center;
+}
+
+.header-main {
+  border-bottom: 1px solid var(--accent-color);
 }
 
 /*-----------------Text-----------------*/
@@ -131,14 +229,18 @@ body {
   letter-spacing: 0.02em;
 }
 
-.text-team {
-  text-align: center;
-}
-
 .text-footer {
   color: var(--accent-color);
   line-height: 1.5;
   letter-spacing: 0.02em;
+  width: 264px;
+}
+
+.projects-list {
+  padding-bottom: 120px;
+  gap: 24px;
+  display: flex;
+  justify-content: center;
 }
 
 /*--------------Backgrounds--------------*/
@@ -148,13 +250,13 @@ body {
 
 .team-member {
   background: var(--white-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
+.header-bg,
 .footer {
-  background: var(--dark-color);
-}
-
-.header-bg {
   background: var(--dark-color);
 }
 
@@ -171,7 +273,9 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   font-family: inherit;
+  padding: 12px 24px;
 }
+
 .button-portfolio:hover,
 .button-portfolio:focus {
   background: var(--button-hover-color);
@@ -186,13 +290,90 @@ body {
   font-size: 16px;
   font-weight: 500;
   border-radius: 4px;
+  border-color: transparent;
   cursor: pointer;
   line-height: 1.5;
   letter-spacing: 0.04em;
   font-family: inherit;
+  padding: 16px 32px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button-order:hover,
 .button-order:focus {
   background: var(--button-hover-color);
+}
+
+/*----------------Containers----------------*/
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.menu-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-portfolio {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 96px;
+  padding-bottom: 120px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.container-our-team {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.container-footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.container-team {
+  padding: 32px 60px;
+}
+
+.header-container {
+  padding: 188px;
+}
+
+.container-app {
+  margin-top: 32px;
+  margin-left: 54px;
+  margin-bottom: 32px;
+  margin-left: 16px;
+}
+
+.team-member {
+  display: flex;
+  flex-direction: column;
+}
+
+.adv-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
+.app {
+  border: 1px solid var(--accent-color);
+  margin-bottom: 48px;
+  min-width: 360px;
+  min-height: 420px;
+}
+
+.app:not(:nth-child(3n + 0)) {
+  margin-right: 24px;
+}
+.app:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
