--- a/css/styles.css
+++ b/css/styles.css
@@ -68,31 +68,32 @@ body {
 
 .team-list {
   display: flex;
-  justify-content: center;
-  gap: 32px;
+  gap: 24px;
 }
 
 .buttons-list {
   display: flex;
   margin-bottom: 72px;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: center;
   gap: 24px;
 }
 
 .advantages-list {
   display: flex;
   align-items: center;
+  gap: 24px;
+}
+
+.advantages {
   padding-top: 120px;
   padding-bottom: 120px;
-  gap: 24px;
 }
 
 .apps-list {
   display: flex;
-  width: 1158px;
   flex-wrap: wrap;
-  justify-content: center;
+  row-gap: 40px;
+  column-gap: 24px;
 }
 
 /*-----------------Logo-----------------*/
@@ -123,7 +124,7 @@ body {
   color: var(--litemode-color);
   line-height: 1.3125;
   letter-spacing: 0.03em;
-  display: flex;
+  display: inline-block;
   margin-bottom: 16px;
 }
 
@@ -237,10 +238,17 @@ body {
 }
 
 .projects-list {
-  padding-bottom: 120px;
   gap: 24px;
   display: flex;
   justify-content: center;
+}
+
+.projects {
+  padding-bottom: 120px;
+}
+
+.img-item {
+  min-width: 360px;
 }
 
 /*--------------Backgrounds--------------*/
@@ -253,6 +261,10 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  min-width: 264px;
+}
+.header-bg {
+  padding: 188px 0;
 }
 
 .header-bg,
@@ -290,13 +302,13 @@ body {
   font-size: 16px;
   font-weight: 500;
   border-radius: 4px;
-  border-color: transparent;
+  border: none;
   cursor: pointer;
   line-height: 1.5;
   letter-spacing: 0.04em;
   font-family: inherit;
   padding: 16px 32px;
-  display: flex;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -313,6 +325,7 @@ body {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  outline: 2px solid tomato;
 }
 
 .menu-container {
@@ -330,34 +343,25 @@ body {
   padding-right: 0;
 }
 
-.container-our-team {
+.team {
   padding-top: 120px;
   padding-bottom: 120px;
 }
 
-.container-footer {
+.footer {
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
 .container-team {
-  padding: 32px 60px;
-}
-
-.header-container {
-  padding: 188px;
+  padding: 32px 16px;
 }
 
 .container-app {
-  margin-top: 32px;
-  margin-left: 54px;
-  margin-bottom: 32px;
-  margin-left: 16px;
-}
-
-.team-member {
-  display: flex;
-  flex-direction: column;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+  padding: 32px 16px;
 }
 
 .adv-item {
@@ -365,15 +369,9 @@ body {
 }
 
 .app {
-  border: 1px solid var(--accent-color);
-  margin-bottom: 48px;
   min-width: 360px;
-  min-height: 420px;
 }
 
-.app:not(:nth-child(3n + 0)) {
-  margin-right: 24px;
-}
-.app:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+.link-app {
+  text-decoration: none;
 }
